--- a/SC22-BatchC-stereo-cavemen/omni/app/templates/index.html
+++ b/SC22-BatchC-stereo-cavemen/omni/app/templates/index.html
@@ -40,7 +40,7 @@
         <!-- Header-->
         <header class="py-5">
             <div class="container px-lg-5">
-                <div class= "textbox" style="border:outset;border-width:15px;border-color:hsl(50, 80%, 64%);">i
+                <div class= "textbox" style="border:outset;border-width:15px;border-color:hsl(50, 80%, 64%);">
                     <div class="m-4 m-lg-5">
                         <img src="{{url_for('static',filename='/img/Logo2.png')}}" alt= "nondairy icon" style ="display:block; margin:auto;width:100px;height:100px;">
                         <h1 class="display-5 fw-bold">Caesar: The Recipe Generating AI</h1>
