--- a/SC22-BatchC-stereo-cavemen/omni/app/templates/team_members.html
+++ b/SC22-BatchC-stereo-cavemen/omni/app/templates/team_members.html
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xxl-4 mb-6" style="background-color:hsl(50, 80%, 54%);">
+                    <div class="col-lg-6 col-xxl-4 mb-6" style="border:outset;border-width:15px;border-color:hsl(50, 80%, 64%);">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xxl-4 mb-6" style="background-color:hsl(50, 80%, 54%);">
+                    <div class="col-lg-6 col-xxl-4 mb-6" style="border:outset;border-width:15px;border-color:hsl(50, 80%, 64%);">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                
@@ -87,7 +87,7 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                
                                 <h2 class="fs-4 fw-bold">Front End</h2>
-                                <p class="mb-0">The front end development team worked on this very website! They wrote all the text you see here and even added custom images. This team was made up of Lincoln, Alex, Sherry, and Chloe.</p>
+                                <p class="mb-0">The front end development team worked on this very website! They wrote all the text you see here and even added custom images. This team was made up of Lincoln, Alex, Sherry, Yatin, Tony and Chloe. (Basically everyone)</p>
                             </div>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xxl-4 mb-6" style="background-color:hsl(50, 80%, 54%);">
+                    <div class="col-lg-6 col-xxl-4 mb-6" style="border:outset;border-width:15px;border-color:hsl(50, 80%, 64%);">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                
@@ -143,8 +143,6 @@
                                       <p>I was first introduced to coding in first grade in computers class at school. It instantly became my favorite subject, and I have enjoyed coding ever since. </p>
                                       <p>My favorite thing to do outside of school is play badminton. I train a lot, play competitively, and play for my school on varsity badminton.
                                       </p>
-                                      <!--<a href="https://discordapp.com/users/673739173449957386" style="text-align:center;"><i class="bi bi-discord"></i></a> 
-                                      <a href="https://www.instagram.com/sherrrryyyy27" style="text-align:center;"><i class="bi bi-instagram"></i></a>-->
                                   </div>
                               </div>
                           </div>
@@ -190,7 +188,7 @@
                         <div class="profile-wrapper">
                             <div class="profile-header profile-same">
                                 <div class="profile-avatar">
-                                    <img src=" " alt="Picture of Yatin">
+                                    <img src="{{url_for('static',filename='img/NameCardPics/Yatin.jpg')}}" alt="Picture of Yatin">
                                 </div>
                                 <h2>Yatin</h2>
                                 <br>
@@ -204,12 +202,12 @@
                                     <div class="social-list">
                                         <ul>
                                             <li class="bio-item paper-button"><a href="" title="Discord" target="_blank"><i class="bi bi-discord"></i></a></li>
-                                          <li class="bio-item paper-button"><a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+                                          <li class="bio-item paper-button"><a href="https://www.instagram.com/yatinbichala" target="_blank"><i class="bi bi-instagram"></i></a></li>
                                         </ul>
                                     </div>
                                     <div class="bio-extra">
                                         <p> Now that I have your attention, I'm Yatin. <br> I think that I am a pretty chill person who enjoys programming, running, tennis, cooking (*trying to cook), and trying out new things! I got into programming around 7th grade after I took an online class.  Turns out that it was college level which is why I never could come close to finishing it.</p>
-                                      <p>  I'm currently a senior at Farmington High, Michigan, and can't wait to leave high school. I fully intend to keep with computer science in college wherever I decide to attend.</p>
+                                      <p>  I'm currently a rising senior at Farmington High, Michigan, and can't wait to leave high school. I fully intend to keep with computer science in college wherever I decide to attend.</p>
                                     </div>
                                 </div>
                             </div>
